# obs-studio

plugins/: CMakeLists.txt
plugins/mul-filters/: CMakeLists.txt  chromatic-aberration-filter.c  color-inverse.c  crt-filter.c  edge-detection-filter.c  gauss-filter.c  mirror-filter.c  mul-filters.c  noise-generator-filter.c  obs-filters.c  radial-wave-filter.c
plugins/mul-filters/data/: chromatic_aberration_filter.effect  color_inverse_filter.effect  crt_filter.effect  edge_detection_filter.effect  gauss_filter.effect  mirror_filter.effect  noise_generator_filter.effect  radial_wave_filter.effect
plugins/obs-filters/: CMakeLists.txt  gauss-filter.c  obs-filters.c  pixelize-filter.c  radial-wave-filter.c
plugins/obs-filters/data/: gauss_filter.effect  pixelize_filter.effect  radial_wave_filter.effect
